refactor: convert to a library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "2"
 
 members = [
+  "bin",
   "app",
   "cli",
   "engine",
@@ -48,7 +49,7 @@ redundant_clone               = "deny"
 std_instead_of_core           = "deny"
 
 [workspace.dependencies]
-emerald                 = { version = "0.0.1", path = "app" }
+emerald-app             = { version = "0.0.1", path = "app" }
 malachitebft-eth-cli    = { version = "0.0.1", path = "cli" }
 malachitebft-eth-engine = { version = "0.0.1", path = "engine" }
 malachitebft-eth-types  = { version = "0.0.1", path = "types" }
