--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -1,11 +1,17 @@
 [package]
-name         = "emerald-app"
+name         = "emerald"
 version      = { workspace = true }
 edition      = { workspace = true }
 repository   = { workspace = true }
 license      = { workspace = true }
 rust-version = { workspace = true }
 publish      = { workspace = true }
+
+default-run = "emerald"
+
+[[bin]]
+name = "emerald"
+path = "src/main.rs"
 
 [lints]
 workspace = true
@@ -16,6 +22,7 @@ malachitebft-eth-cli     = { workspace = true }
 malachitebft-eth-engine  = { workspace = true }
 malachitebft-app-channel = { workspace = true }
 malachitebft-proto       = { workspace = true }
+emerald-app              = { workspace = true }
 
 alloy-provider         = { version = "0.11.1" }
 alloy-primitives       = { workspace = true }
