Try altering the block production workflow

--- a/.github/workflows/emerald.yml
+++ b/.github/workflows/emerald.yml
@@ -30,6 +30,14 @@ jobs:
     name: Block Production
     runs-on: ubuntu-latest
     steps:
+      - id: filter
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            code:
+              - '**/*.go'
+              - 'Makefile'
+              - 'go.*'
       - name: Checkout
         uses: actions/checkout@v5
         with:
