Updated versions and code

--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -31,7 +31,7 @@ serde_json      = { workspace = true }
 signature       = { workspace = true }
 
 alloy-consensus  = { workspace = true }
-alloy-primitives = { version = "0.8.21", default-features = false, features = [ "serde" ] }
+alloy-primitives = { workspace = true, default-features = false, features = [ "serde" ] }
 k256             = "0.13"
 
 [build-dependencies]
