--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,15 +53,16 @@ malachitebft-eth-cli    = { version = "0.0.1", path = "cli" }
 malachitebft-eth-engine = { version = "0.0.1", path = "engine" }
 malachitebft-eth-types  = { version = "0.0.1", path = "types" }
 
-alloy-primitives       = { version = "0.8.26", features = [ "std", "rand" ] }
-alloy-consensus        = { version = "0.11.1", default-features = false }
-alloy-rpc-types        = { version = "0.11.1", features = [ "eth" ], default-features = false }
-alloy-contract         = { version = "0.11.1", default-features = false }
-alloy-sol-types        = { version = "0.8.26", features = [ "json" ], default-features = false }
-alloy-rpc-types-eth    = { version = "0.11.1", default-features = false }
-alloy-rpc-types-engine = { version = "0.11.1", features = [ "ssz", "jwt", "serde" ], default-features = false }
-alloy-json-abi         = { version = "0.8.26", default-features = false }
-alloy-dyn-abi          = { version = "0.8.26", default-features = false, features = [ "std" ] }
+alloy-primitives       = { version = "1.4.1", features = [ "std", "rand" ], default-features = false }
+alloy-consensus        = { version = "1.1.3", default-features = false }
+alloy-eips             = { version = "1.1.3", default-features = false }
+alloy-rpc-types        = { version = "1.1.3", features = [ "eth" ], default-features = false }
+alloy-contract         = { version = "1.1.3", default-features = false }
+alloy-sol-types        = { version = "1.4.1", features = [ "json" ], default-features = false }
+alloy-rpc-types-eth    = { version = "1.1.3", default-features = false }
+alloy-rpc-types-engine = { version = "1.1.3", features = [ "ssz", "jwt", "serde" ], default-features = false }
+alloy-json-abi         = { version = "1.4.1", default-features = false }
+alloy-dyn-abi          = { version = "1.4.1", default-features = false, features = [ "std" ] }
 
 
 humantime          = "2.2.0"
