--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name         = "emerald-app"
+name         = "emerald"
 version      = { workspace = true }
 edition      = { workspace = true }
 repository   = { workspace = true }
