Add command to modify malachite config

--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -52,6 +52,7 @@ jsonrpsee-http-client = { version = "0.25.0" }
 
 reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
 url             = { workspace = true }
+toml            = "0.8"
 
 [dev-dependencies]
 reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
