--- a/tests/mbt/Cargo.toml
+++ b/tests/mbt/Cargo.toml
@@ -8,7 +8,7 @@ publish = false
 dead_code = "allow"
 
 [dependencies]
-quint-connect = { git = "ssh://git@github.com/informalsystems/quint-connect.git" }
+quint-connect = { version = "0.1.0" }
 serde = { version = "1.0", features = ["derive"] }
 itf = "0.4"
 anyhow = "1.0"
