--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -13,10 +13,10 @@ workspace = true
 [dependencies]
 tokio                = { version = "1", features = [ "full" ] }
 serde                = { version = "1", features = [ "derive" ] }
-serde_json           = "1"
-tracing              = "0.1"
+serde_json           = { workspace = true }
+tracing              = { workspace = true }
 tracing-subscriber   = "0.3"
-async-trait          = "0.1"
+async-trait          = "{ workspace = true }
 hex                  = "0.4"
 rand                 = { workspace = true }
 color-eyre           = { workspace = true }
