--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -16,7 +16,7 @@ serde                = { version = "1", features = [ "derive" ] }
 serde_json           = { workspace = true }
 tracing              = { workspace = true }
 tracing-subscriber   = "0.3"
-async-trait          = "{ workspace = true }
+async-trait          = { workspace = true }
 hex                  = "0.4"
 rand                 = { workspace = true }
 color-eyre           = { workspace = true }
