--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -18,6 +18,7 @@ malachitebft-app-channel = { workspace = true }
 malachitebft-proto       = { workspace = true }
 
 alloy-provider         = { version = "1.1.3" }
+alloy-genesis          = "1.1.1"
 alloy-primitives       = { workspace = true }
 alloy-contract         = { workspace = true }
 alloy-sol-types        = { workspace = true, features = [ "json" ] }
