--- a/.github/workflows/emerald.yml
+++ b/.github/workflows/emerald.yml
@@ -5,6 +5,11 @@ on:
   pull_request:
   push:
     branches: [main]
+    paths:
+      - '**/.rs'
+      - '**/Cargo.toml'
+      - '**/Cargo.lock'
+      - '.github/workflows/*.yml'
 
 permissions:
   contents: read
@@ -54,15 +59,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Run emerald
         run: |
-          cargo build
-          ./scripts/generate_testnet_config.sh --nodes 3 --testnet-config-dir .testnet --fee-recipient 0x0000000000000000000000000000000000000042
-          cargo run --bin emerald -- testnet --home nodes --testnet-config .testnet/testnet_config.toml
-          ls nodes/*/config/priv_validator_key.json | xargs -I{} cargo run --bin emerald show-pubkey {} > nodes/validator_public_keys.txt
-          cargo run --bin emerald-utils genesis --public-keys-file ./nodes/validator_public_keys.txt --devnet
-          docker compose up -d reth0 reth1 reth2 reth3 prometheus grafana otterscan
-          ./scripts/add_peers.sh --nodes 4
-          @echo 👉 Grafana dashboard is available at http://localhost:4000
-          bash scripts/spawn.bash --nodes 4 --home nodes --no-delay
+          make testnet-start
 
       - name: Upload test logs
         if: failure()
