--- a/.github/workflows/emerald.yml
+++ b/.github/workflows/emerald.yml
@@ -10,6 +10,7 @@ on:
       - '**/Cargo.toml'
       - '**/Cargo.lock'
       - '.github/workflows/*.yml'
+      - '!*.md'
 
 permissions:
   contents: read
@@ -39,6 +40,17 @@ jobs:
         uses: actions/checkout@v5
         with:
           submodules: recursive
+
+      - id: filter
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            code:
+              - '**/.rs'
+              - 'Makefile'
+              - '**/Cargo.toml'
+              - '**/Cargo.lock'
+              - '**/.sh'
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
         with:
@@ -51,6 +63,7 @@ jobs:
         uses: foundry-rs/foundry-toolchain@v1
       - name: Run Forge build
         run: forge build
+        if: steps.filter.outputs.code == 'true'
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -60,6 +73,7 @@ jobs:
       - name: Run emerald
         run: |
           make testnet-start
+        if: steps.filter.outputs.code == 'true'
 
       - name: Upload test logs
         if: failure()
