Add run when emerald.yml is changed

--- a/.github/workflows/emerald.yml
+++ b/.github/workflows/emerald.yml
@@ -45,6 +45,7 @@ jobs:
               - '**/Cargo.toml'
               - '**/Cargo.lock'
               - '**/.sh'
+              - '*/workflows/emerald.yml'
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
         with:
