Add test.yml as trigger only for test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,6 +43,7 @@ jobs:
               - '**/Cargo.toml'
               - '**/Cargo.lock'
               - '**/.sh'
+              - '*/workflows/test.yml'
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
         with:
