--- a/.github/workflows/emerald.yml
+++ b/.github/workflows/emerald.yml
@@ -65,6 +65,11 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build emerald
+        run: |
+          cargo build
+          cd custom-reth && cargo build
+          cd ../
       - name: Run emerald
         run: |
           ./scripts/generate_testnet_config.sh --nodes 4 --testnet-config-dir .testnet --fee-recipient 0x0000000000000000000000000000000000000042
