--- a/custom-reth/Cargo.toml
+++ b/custom-reth/Cargo.toml
@@ -19,7 +19,11 @@ reth-engine-primitives   = { git = "https://github.com/paradigmxyz/reth", tag = 
 reth-node-api            = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
 reth-node-builder        = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
 reth-payload-primitives  = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
-alloy-rpc-types-engine   = { version = "1.1.3" }
+alloy-rpc-types-engine   = { version = "1.4.3" }
+
+
+vergen = "=9.0.4"
+vergen-git2 = "=1.0.5"
 
 eyre = "0.6"
 
