--- a/.github/workflows/reth-build.yml
+++ b/.github/workflows/reth-build.yml
@@ -1,4 +1,4 @@
-name: Emerald
+name: Reth build
 
 on:
   merge_group:
@@ -26,8 +26,8 @@ env:
   RUSTUP_MAX_RETRIES: 10
 
 jobs:
-  emerald-block-production:
-    name: Block Production
+  custom-reth-build:
+    name: Build custom reth
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -40,12 +40,10 @@ jobs:
         with:
           filters: |
             code:
-              - '**/*.rs'
-              - 'Makefile'
-              - '**/Cargo.toml'
-              - '**/Cargo.lock'
-              - '**/*.sh'
-              - '*/workflows/emerald.yml'
+              - 'custom-reth/*.rs'
+              - 'custom-reth/Cargo.toml'
+              - 'custom-rethCargo.lock'
+              - '*/workflows/reth-build.yml'
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
         with:
@@ -54,34 +52,13 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1
       - name: Install cargo-nextest
         uses: taiki-e/install-action@cargo-nextest
-      - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain@v1
-      - name: Run Forge build
-        run: forge build
-        if: steps.filter.outputs.code == 'true'
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build emerald
+      - name: Build Reth
         run: |
-          cargo build
-      - name: Run emerald
-        run: |
-          ./scripts/generate_testnet_config.sh --nodes 4 --testnet-config-dir .testnet --fee-recipient 0x0000000000000000000000000000000000000042
-          cargo run --bin emerald -- testnet --home nodes --testnet-config .testnet/testnet_config.toml
-          ls nodes/*/config/priv_validator_key.json | xargs -I{} cargo run --bin emerald show-pubkey {} > nodes/validator_public_keys.txt
-          cargo run --bin emerald-utils genesis --public-keys-file ./nodes/validator_public_keys.txt --devnet
-          docker compose up -d reth0 reth1 reth2 reth3 prometheus grafana otterscan
-          ./scripts/add_peers.sh --nodes 4
-          bash scripts/spawn.bash --nodes 4 --home nodes --no-delay --no-wait
+          cd custom-reth && cargo build
         if: steps.filter.outputs.code == 'true'
-
-      - name: Upload test logs
-        if: failure()
-        uses: actions/upload-artifact@v5
-        with:
-          name: emerald-test-logs
-          path: nodes/**/logs/*.log
