--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -14,6 +14,7 @@ workspace = true
 rand               = { workspace = true }
 color-eyre         = { workspace = true }
 tokio              = { version = "1", features = [ "full" ] }
+futures            = "0.3"
 serde              = { version = "1", features = [ "derive" ] }
 serde_json         = "1"
 tracing            = "0.1"
