test(mbt): Add Model Based Test for Emerald
This patch connects the newly added Quint specs to Emerald's code via
the Quint Connect library.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,15 @@ members = [
   "engine",
   "utils",
   "types",
+  "tests/mbt",
+]
+
+default-members = [
+  "app",
+  "cli",
+  "engine",
+  "utils",
+  "types",
 ]
 
 [workspace.package]
