--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,7 @@ on:
 
 permissions:
   contents: read
+  packages: read
 
 # If new code is pushed to a PR branch, then cancel in progress workflows for that PR.
 # Ensures that we don't waste CI time, and returns results quicker.
@@ -20,7 +21,7 @@ env:
   CARGO_TERM_COLOR: always
   CARGO_PROFILE_DEV_DEBUG: 1
   CARGO_PROFILE_RELEASE_DEBUG: 1
-  RUST_BACKTRACE: short
+  RUST_BACKTRACE: full
   CARGO_NET_RETRY: 10
   RUSTUP_MAX_RETRIES: 10
 
@@ -57,11 +58,60 @@ jobs:
       - name: Run Forge build
         run: forge build
         if: steps.filter.outputs.code == 'true'
-      - name: Run tests
+      - name: Run unit tests
         run: |
           cargo nextest run \
             --workspace \
             --all-features \
             --no-fail-fast \
-            --failure-output final
+            --failure-output final \
+            --filterset 'not package(emerald-mbt)'
+        if: steps.filter.outputs.code == 'true'
+
+  mbt:
+    name: MBT Suite
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    # XXX: Do not block on MBT initially until we gain confidence CI is not
+    # flaky for any reason.
+    continue-on-error: true
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+        with:
+          submodules: recursive
+      - id: filter
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            code:
+              - '**/*.rs'
+              - '**/*.qnt'
+              - 'Makefile'
+              - '**/Cargo.toml'
+              - '**/Cargo.lock'
+              - '**/*.sh'
+              - '*/workflows/test.yml'
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+      - name: Install Quint
+        run: bun install -g @informalsystems/quint
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v3
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Setup Rust toolchain
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: nightly
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+      - name: Run MBT suite
+        run: make mbt-test
         if: steps.filter.outputs.code == 'true'
