--- a/compose_ethrex.yaml
+++ b/compose_ethrex.yaml
@@ -20,6 +20,8 @@ services:
       #- "-d"
       - "--datadir=/data/ethrex"
       - "--network=/root/assets/genesis.json"
+      - "--syncmode"
+      - "full"
       #- "--http"
       - "--http.port=8645"
       - "--http.addr=0.0.0.0"
@@ -63,6 +65,8 @@ services:
       - "--datadir=/data/ethrex"
       - "--log.level=trace"
       - "--network=/root/assets/genesis.json"
+      - "--syncmode"
+      - "full"
       # - "--http"
       - "--http.port=8745"
       - "--http.addr=0.0.0.0"
@@ -114,6 +118,8 @@ services:
       - "--datadir=/data/ethrex"
       - "--log.level=trace"
       - "--network=/root/assets/genesis.json"
+      - "--syncmode"
+      - "full"
       # - "--http"
       - "--http.port=8845"
       - "--http.addr=0.0.0.0"
@@ -171,14 +177,14 @@ services:
   #     - "--discovery.port=34303"
   #     - "--port=34303"
   #     - "--nat=extip:127.0.0.1"
-      # - "--builder.gaslimit=3600000000" # default * 100
-      # - "--builder.interval=10ms"
-      # - "--builder.deadline=1" # The deadline in seconds for when the payload builder job should resolve
-      # - "--builder.max-tasks=10" # default=3
-      # - "--txpool.gas-limit=300000000" # default * 10
-      # - "--blobpool.pricebump=1"
-      # - "--txpool.pending-max-count=50000" # default=10000
-      # - "--txpool.queued-max-count=50000" # default=10000
+  #     # - "--builder.gaslimit=3600000000" # default * 100
+  #     # - "--builder.interval=10ms"
+  #     # - "--builder.deadline=1" # The deadline in seconds for when the payload builder job should resolve
+  #     # - "--builder.max-tasks=10" # default=3
+  #     # - "--txpool.gas-limit=300000000" # default * 10
+  #     # - "--blobpool.pricebump=1"
+  #     # - "--txpool.pending-max-count=50000" # default=10000
+  #     # - "--txpool.queued-max-count=50000" # default=10000
   # reth4:
   #   network_mode: host
   #   image: ethrex:local
