move Syncing to the docs

--- a/docs/operational-docs/book.toml
+++ b/docs/operational-docs/book.toml
@@ -10,11 +10,15 @@ create-missing = true
 
 [preprocessor.links]
 
+[preprocessor.mermaid]
+command = "mdbook-mermaid"
+
 [output.html]
 default-theme = "light"
 preferred-dark-theme = "navy"
 git-repository-url = "https://github.com/informalsystems/emerald"
 additional-css = ["theme/custom.css"]
+additional-js = ["mermaid.min.js", "mermaid-init.js"]
 
 [output.html.search]
 enable = true
