Add alloy-rpc-types-eth dependency version 1.4.3 (#1)
Fix build issue
pin alloy-rpc-types-eth so that compatible with alloy-evm-0.23.3

--- a/custom-reth/Cargo.toml
+++ b/custom-reth/Cargo.toml
@@ -20,6 +20,7 @@ reth-node-api            = { git = "https://github.com/paradigmxyz/reth", tag = 
 reth-node-builder        = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
 reth-payload-primitives  = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
 alloy-rpc-types-engine   = { version = "1.4.3" }
+alloy-rpc-types-eth      = { version = "=1.4.3" }
 
 
 vergen      = "=9.0.4"
