--- a/docs/operational-docs/src/config-examples/emerald-config.toml
+++ b/docs/operational-docs/src/config-examples/emerald-config.toml
@@ -9,7 +9,7 @@ retry_config.max_elapsed_time = "20s"
 fee_recipient = "0x4242424242424242424242424242424242424242"
 eth_genesis_path="./assets/genesis.json"
 
-max_retain_blocks = 0
+certificate_retain_height = 0
 prune_at_block_interval = 5
 
 [retry_config]
