--- a/docs/operational-docs/src/config-examples/emerald-config.toml
+++ b/docs/operational-docs/src/config-examples/emerald-config.toml
@@ -8,8 +8,8 @@ retry_config.max_delay = "2s"
 retry_config.max_elapsed_time = "20s"
 fee_recipient = "0x4242424242424242424242424242424242424242"
 eth_genesis_path="./assets/genesis.json"
-
-max_retain_blocks = 0
+num_certificates_to_retain = 64000
+num_temp_blocks_retained = 0
 prune_at_block_interval = 5
 
 [retry_config]
