--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,7 @@ async-trait        = "0.1.88"
 axum               = "0.7"
 bytes              = { version = "1", default-features = false }
 bytesize           = "1.3"
+blst               = "0.3.16"
 clap               = "4.5"
 color-eyre         = "0.6"
 config             = { version = "0.15", features = [ "toml" ], default-features = false }
