--- a/docs/operational-docs/src/config-examples/emerald-config.toml
+++ b/docs/operational-docs/src/config-examples/emerald-config.toml
@@ -1,8 +1,8 @@
 moniker = "test-0"
-el_config.execution_authrpc_address = "http://<RETH_IP>:8545"
-el_config.engine_authrpc_address = "http://<RETH_IP>:8551"
-el_config.jwt_token_path = "/home/emerald/jwt"
-el_config.eth_genesis_path="./assets/genesis.json"
+ethereum_config.execution_authrpc_address = "http://<RETH_IP>:8545"
+ethereum_config.engine_authrpc_address = "http://<RETH_IP>:8551"
+ethereum_config.jwt_token_path = "/home/emerald/jwt"
+ethereum_config.eth_genesis_path="./assets/genesis.json"
 el_node_type = "archive"
 retry_config.initial_delay = "100ms"
 retry_config.max_delay = "2s"
