update cargo dependencies and lock file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ resolver = "2"
 members = [
   "app",
   "cli",
+  "contracts",
   "engine",
   "utils",
   "types",
@@ -49,6 +50,7 @@ std_instead_of_core           = "deny"
 
 [workspace.dependencies]
 emerald                 = { version = "0.0.1", path = "app" }
+emerald-contracts       = { version = "0.0.1", path = "contracts" }
 malachitebft-eth-cli    = { version = "0.0.1", path = "cli" }
 malachitebft-eth-engine = { version = "0.0.1", path = "engine" }
 malachitebft-eth-types  = { version = "0.0.1", path = "types" }
